# frames-credit-card-trans-demo

./: README.md  frames-credit-card-trans-demo.cabal  stack.yaml
benchmarks/: Bench.hs
data/: purchasing-card-data-2014-large.csv.REMOVED.git-id  purchasing-card-data-2014.csv
src/: Main.hs
