name:                frames-credit-card-trans-demo
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/frames-credit-card-trans-demo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable frames-credit-card-trans-demo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       Frames
                     , base >= 4.7 && < 5
                     , frames-diff
                     , lens
                     , old-locale >= 1.0.0.7
                     , pipes
                     , rapid
                     , text
                     , time
                     , time-lens

benchmark benchtest
  build-depends: base,
                criterion,
                clock,
                Frames,
                frames-diff,
                pipes,
                formatting >= 6.1.0,
                time
  default-language: Haskell2010
  ghc-options:      -Wall -O2  -threaded -with-rtsopts=-N
  hs-source-dirs:   benchmarks
  main-is:          Bench.hs
  type:             exitcode-stdio-1.0